# pedal-display-gadget

./: ARCHITECTURE.md  ASSEMBLY.md  BREADBOARD_CHANGESET.md  CMakeLists.txt  CODEX_INSTRUCTION_3BC_launcher_theme.md  CODEX_INSTRUCTION_audio_crash_ladder_fix.md  CODEX_INSTRUCTION_backlog_minor.md  CODEX_INSTRUCTION_music_events_bounce.md  CODEX_INSTRUCTION_pc_simulator.md  CODEX_INSTRUCTION_sim_input_audio.md  LAUNCHER_DESIGN.md  PROJECT_MASTER.md  PUNCHLIST.md  README.md  TAEYUN_TODO.md  UI_DESIGN.md  app.h  app_bounce.c  app_images.c  app_main.c  app_monitor.c  app_slots.c  app_slots.h  app_tuner.c  audio_config.h  content_screen.c  content_screen.h  display_bringup.c  display_bringup.h  fft_map.c  fft_map.h  gadget_app.c  gadget_app.h  midi.c  midi.h  midi_map.c  music_events.c  music_events.h  platform.h  platform_esp.c  (+15 more)
hardware/: ESP32-S3-DevKitC-1.kicad_mod  HARDWARE_LIB_NOTES.md  Jack_6.35mm_Mono_Panel.kicad_mod  MP1584_Module.kicad_mod  NETLIST_SPEC.md  PWR_ELB040202.kicad_mod  fp-lib-table  pedal-display-gadget.kicad_prl  pedal-display-gadget.kicad_pro  pedal-display-gadget.kicad_sch  pedal-display-gadget.kicad_sym  sym-lib-table
hardware/pedal-display-gadget.pretty/: ESP32-S3-DevKitC-1.kicad_mod  MP1584_Module.kicad_mod
main/: CMakeLists.txt  idf_component.yml
sim/: CMakeLists.txt  README.md  UI_SOURCES.cmake  lv_conf.h  platform_sim.c  sim_audio.c  sim_audio.h  sim_main.c
sim/compat/: esp_err.h  esp_heap_caps.h  esp_log.h  esp_timer.h
tests/: CMakeLists.txt  test_fft_normalization.py  test_midi.c  test_tuner.c
tmp/ppt-reference/: pedal-reference.pptx
